--- a/server_lazy.cfg
+++ b/server_lazy.cfg
@@ -1,4 +1,4 @@
 //Lazy load cfg
-//This is config file load after mapactivate.
+//This is config file load after mapstart.
 //sv_airaccelerate 99999
 //sv_cheats 1
